<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9F4FF"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@color/control_panel"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/sw_start_track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/switch_style"
                    android:showText="false"
                    android:thumb="@null"
                    android:track="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/starting"
                    android:textColor="@color/colorDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/sw_render"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/switch_style"
                    android:showText="false"
                    android:thumb="@null"
                    android:track="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/render"
                    android:textColor="@color/colorDark" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_panel_margin_top"
            android:layout_marginBottom="@dimen/control_panel_tv_margin_bottom"
            android:text="@string/resolution"
            android:textColor="@color/colorDark" />

        <Spinner
            android:id="@+id/spinner_resolution"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/control_panel_margin_left"
            android:background="@drawable/spinner_background"
            android:entries="@array/resolution_item"
            android:overlapAnchor="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_panel_margin_top"
            android:layout_marginBottom="@dimen/control_panel_tv_margin_bottom"
            android:text="@string/select_track_mode"
            android:textColor="@color/colorDark" />

        <Spinner
            android:id="@+id/track_mode_spinner_type"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/control_panel_margin_left"
            android:background="@drawable/spinner_background"
            android:entries="@array/track_mode_spinner_item"
            android:overlapAnchor="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_panel_margin_top"
            android:layout_marginBottom="@dimen/control_panel_tv_margin_bottom"
            android:text="@string/select_skeleton_mode"
            android:textColor="@color/colorDark" />

        <Spinner
            android:id="@+id/skeleton_mode_spinner_type"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/control_panel_margin_left"
            android:background="@drawable/spinner_background"
            android:entries="@array/skeleton_mode_spinner_item"
            android:overlapAnchor="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_panel_margin_top"
            android:layout_marginBottom="@dimen/control_panel_tv_margin_bottom"
            android:text="@string/rotation"
            android:textColor="@color/colorDark" />

        <Spinner
            android:id="@+id/spinner_rotate_type"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/control_panel_margin_left"
            android:background="@drawable/spinner_background"
            android:entries="@array/rotate_type"
            android:overlapAnchor="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_panel_margin_top"
            android:layout_marginBottom="@dimen/control_panel_tv_margin_bottom"
            android:text="@string/filter_param"
            android:textColor="@color/colorDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekbar_filter_param"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:max="10"
                android:min="0"
                android:progress="0"
                android:theme="@style/SeekBarColor" />

            <TextView
                android:id="@+id/tv_filter_param_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textColor="@color/colorDark" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <FrameLayout
            android:layout_width="1152px"
            android:layout_height="864px"
            android:layout_gravity="center"
            android:background="@android:color/black">

            <com.orbbec.widget.OBPoseGLView
                android:id="@+id/glColorView"
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:background="#c04f4f4f"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tv_frame_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frame_rate"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:id="@+id/tv_track_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_rate"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:id="@+id/tv_track_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"></TextView>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>